Fixed the display before downloading the PDF. Now the grid show behind the characters correctly. Fixed problem with the fonts by adding font files. The fonts now show correctly in the generated PDF.

--- a/src/fonts.css
+++ b/src/fonts.css
@@ -1,15 +1,17 @@
 /* Import Chinese fonts from Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@300;400;500;700&family=Noto+Sans+SC:wght@300;400;500;700&display=swap');
 
-/* Define custom font families for better Chinese character support */
-.chinese-fangsong {
-  font-family: "FangSong", "仿宋", "STFangSong", "华文仿宋", "Noto Serif SC", serif !important;
+@font-face {
+  font-family: FangSong; /* set name */
+  src: url(./Fonts/FangSong.ttf); /* url of the font */
 }
 
-.chinese-kaiti {
-  font-family: "KaiTi", "楷体", "STKaiti", "华文楷体", "Noto Serif SC", serif !important;
+@font-face {
+  font-family: KaiTi; /* set name */
+  src: url(./Fonts/KaiTi.ttf); /* url of the font */
 }
 
-.chinese-simsun {
-  font-family: "SimSun", "宋体", "华文细黑", "STXihei", "Noto Sans SC", sans-serif !important;
+@font-face {
+  font-family: SimSun; /* set name */
+  src: url(./Fonts/SimSun.ttf); /* url of the font */
 }
